
[package]
name = "lorenz"
version = "0.1.0"
authors = ["joeperri95"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.61"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.4"
futures-util = "0.3.30"
gloo = { version = "0.11.0", features = ["timers", "futures"]}
nalgebra = "*"
console_error_panic_hook = { version = "0.1.1", optional = false } 
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"]}

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'HtmlButtonElement',
  'HtmlLabelElement',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
  'WebGlUniformLocation',
  'WebGlProgram',
  'WebGlShader',
  'Window',
  'KeyboardEvent',
  'InputEvent',
  'MouseEvent',
]
